--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
@@ -18,6 +20,7 @@ dependencies:
   # badges: ^2.0.2
   badges: ^3.1.2
   carousel_slider: ^4.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
